syntax = "proto3";

package protos;

import "protos/error.proto";
import "protos/session.proto";

message User {
    string ID = 1;
    string Name = 2;
    string Username = 3;
    string Password = 4;
    string Details = 5;
    string UserType = 6;
    string UserStatus = 7;
    string CreatedAt = 8;
    string UpdatedAt = 9;
}

message ReqRegistration {
    string Name = 1;
    string Username = 2;
    string Password = 3;
    string Details = 4;
}

message ResRegistration {
    User User = 1;
    repeated Error Errors = 2;
}

message ReqLogin {
    string Username = 1;
    string Password = 2;
}

message ResLogin {
    Session Session = 1;
    repeated Error Errors = 2;
}

message ReqProfile {
    string AccessToken = 1;
}

message ResProfile {
    User User = 1;
    repeated Error Errors = 2;
}

message ReqUpdateUser {
    string Name = 1;
    string Details = 2;
}

message ResUpdateUser {
    User User = 1;
    repeated Error Errors = 2;
}

message ReqChangePassword {
    string OldPassword = 1;
    string NewPassword = 2;
}

message ResChangePassword {
    bool Success = 1;
    repeated Error Errors = 2;
}

message ReqChangeUserStatus {
    string NewStatus = 1;
}

message ResChangeUserStatus {
    bool Success = 1;
    repeated Error Errors = 2;
}

message ReqChangeUserType {
    string UserType = 1;
}

message ResChangeUserType {
    bool Success = 1;
    repeated Error Errors = 2;
}

message ReqUserLogout {
    string AccessToken = 1;
}

message ResUserLogout {
    bool Success = 1;
    repeated Error Errors = 2;
}

message ReqResetPasswordRequest {
    string Username = 1;
}

message ResResetPasswordRequest {
    bool Success = 1;
    repeated Error Errors = 2;
}

message ReqResetPassword {
    string PasswordResetToken = 1;
    string NewPassword = 2;
}

message ResResetPassword {
    bool success = 1;
    repeated Error Errors = 2;
}
